feat: ymal update and change docs for form

--- a/src/fieldinput/api.yaml
+++ b/src/fieldinput/api.yaml
@@ -28,6 +28,7 @@
     - name: placeholder
       title: 占位符
       type: string
+      default: 请输入
       description: 原生属性
     - name: readonly
       title: 只读
