feat(@vant/cli): vant config become esm

--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -8,7 +8,7 @@
     "vant-cli": "./bin.js"
   },
   "engines": {
-    "node": "^12.20.0 || ^14.17.0 || >=16.0.0"
+    "node": "^14.16.0 || >=16.0.0"
   },
   "publishConfig": {
     "access": "public",
@@ -81,7 +81,7 @@
     "postcss-load-config": "^3.1.0",
     "prettier": "^2.4.1",
     "release-it": "^14.11.6",
-    "stylelint": "^14.0.1",
+    "stylelint": "^13.0.0",
     "transliteration": "^2.2.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
