fix: swipe cant drag for ide and add inctreator click

--- a/src/swipe/api.yaml
+++ b/src/swipe/api.yaml
@@ -36,7 +36,7 @@
       support:
         - name: van-swipe-item
           title: 幻灯片子项
-          snippet: <van-swipe-item><van-image style="width:100%;height:100%"
+          snippet: <van-swipe-item vusion-slot-name="default"><van-image style="width:100%;height:100%"
             src="https://static-vusion.163yun.com/assets/cloud-ui/1.jpg"></van-image></van-swipe-item>
 - name: van-swipe-item
   title: 幻灯片选项
