--- a/packages/vant-popperjs/package.json
+++ b/packages/vant-popperjs/package.json
@@ -15,7 +15,8 @@
   "scripts": {
     "dev": "rollup --config rollup.config.js --watch",
     "build": "rollup --config rollup.config.js && tsc -p ./tsconfig.json --emitDeclarationOnly",
-    "release": "npm run build && release-it"
+    "release": "pnpm build && release-it",
+    "prepare": "pnpm build"
   },
   "license": "MIT",
   "repository": "https://github.com/youzan/vant/tree/dev/packages/vant-popperjs",
@@ -23,6 +24,7 @@
     "@popperjs/core": "^2.9.2"
   },
   "devDependencies": {
+    "@vant/cli": "workspace:*",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "release-it": "^14.2.2",
