--- a/.github/workflows/deploy-v3-site.yml
+++ b/.github/workflows/deploy-v3-site.yml
@@ -14,6 +14,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 'dev'
+        uses: actions/setup-node@v2
+          with:
+            node-version: '14'
+            cache: 'pnpm'
 
       - name: Install dependencies
         uses: pnpm/action-setup@v2.0.1
