--- a/.github/workflows/deploy-v3-site.yml
+++ b/.github/workflows/deploy-v3-site.yml
@@ -14,16 +14,19 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 'dev'
-        uses: actions/setup-node@v2
-          with:
-            node-version: '14'
-            cache: 'pnpm'
 
-      - name: Install dependencies
-        uses: pnpm/action-setup@v2.0.1
-        with:
-          version: 6.20.3
-          run_install: true
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2.0.1
+      with:
+        version: 6.20.3
+
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+        cache: 'pnpm'
+
+    - name: Install dependencies
+      run: pnpm install
 
       - name: Build Site
         run: npm run build:site
