chore: move to pnpm (#9817)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,13 +6,20 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v2
+
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2.0.1
       with:
-        node-version: '14.x'
+        version: 6.20.3
+
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+        cache: 'pnpm'
 
     - name: Install dependencies
-      uses: bahmutov/npm-install@v1
+      run: pnpm install
 
     - name: Run linter
       run: npm run lint
@@ -20,13 +27,20 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v2
+
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2.0.1
       with:
-        node-version: '14.x'
+        version: 6.20.3
+
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+        cache: 'pnpm'
 
     - name: Install dependencies
-      uses: bahmutov/npm-install@v1
+      run: pnpm install
 
     - name: Run test cases
       run: npm test
@@ -39,13 +53,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v2
+
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2.0.1
       with:
-        node-version: '14.x'
+        version: 6.20.3
+
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+        cache: 'pnpm'
 
     - name: Install dependencies
-      uses: bahmutov/npm-install@v1
+      run: pnpm install
 
     - name: Build
       run: npm run build
