--- a/.github/workflows/deploy-v3-site.yml
+++ b/.github/workflows/deploy-v3-site.yml
@@ -15,8 +15,18 @@ jobs:
         with:
           ref: 'dev'
 
-      - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+    - name: Install pnpm
+      uses: pnpm/action-setup@v2.0.1
+      with:
+        version: 6.20.3
+
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16'
+        cache: 'pnpm'
+
+    - name: Install dependencies
+      run: pnpm install
 
       - name: Build Site
         run: npm run build:site
