--- a/packages/create-vant-cli-app/package.json
+++ b/packages/create-vant-cli-app/package.json
@@ -33,7 +33,7 @@
     "@types/yeoman-environment": "^2.3.3",
     "@types/yeoman-generator": "^3.1.4",
     "release-it": "^13.0.0",
-    "typescript": "^3.8.3"
+    "typescript": "4.x"
   },
   "dependencies": {
     "chalk": "^3.0.0",
