--- a/packages/vant-lazyload/package.json
+++ b/packages/vant-lazyload/package.json
@@ -25,6 +25,7 @@
     "@vant/use": "^1.3.2"
   },
   "devDependencies": {
+    "@vue/runtime-core": "3.x",
     "@vant/cli": "workspace:*",
     "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-node-resolve": "^10.0.0",
