--- a/packages/vant-use/package.json
+++ b/packages/vant-use/package.json
@@ -29,7 +29,7 @@
     "fast-glob": "^3.2.7",
     "fs-extra": "^10.0.0",
     "release-it": "^14.0.2",
-    "typescript": "^4.0.2",
+    "typescript": "4.x",
     "vue": "^3.2.20"
   },
   "release-it": {
