--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vant",
-  "version": "3.2.7",
+  "version": "3.2.8",
   "description": "Mobile UI Components built on Vue",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -55,8 +55,11 @@
   "devDependencies": {
     "@vant/area-data": "^1.1.3",
     "@vant/cli": "^4.0.0-beta.5",
-    "@vue/compiler-sfc": "^3.2.19",
-    "vue": "^3.2.20"
+    "@vue/compiler-sfc": "^3.2.20",
+    "@vue/runtime-core": "^3.2.20",
+    "typescript": "4.x",
+    "vue": "^3.2.20",
+    "vue-router": "^4.0.12"
   },
   "sideEffects": [
     "es/**/style/*",
