--- a/.github/ISSUE_TEMPLATE/template-3-feature-request-vant.zh-CN.yml
+++ b/.github/ISSUE_TEMPLATE/template-3-feature-request-vant.zh-CN.yml
@@ -1,7 +1,7 @@
 name: 我想要一个 Vant 的新功能
 description: 通过标准模板描述一下你的功能需求。
 title: "[Feature Request] 在此填写标题"
-labels: ["feature"]
+labels: ["💡 feature"]
 body:
   - type: markdown
     attributes:
