feat(@vant/area-data): esm output

--- a/packages/vant-area-data/tsconfig.json
+++ b/packages/vant-area-data/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2019",
     "outDir": "./lib",
-    "module": "commonjs",
+    "module": "ES2015",
     "strict": true,
     "declaration": true,
     "skipLibCheck": true,
