--- a/packages/vant-area-data/package.json
+++ b/packages/vant-area-data/package.json
@@ -2,7 +2,8 @@
   "name": "@vant/area-data",
   "version": "1.1.3",
   "description": "Vant 省市区数据",
-  "main": "lib/index.js",
+  "main": "./lib/index.js",
+  "typings": "./lib/index.d.ts",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
