--- a/packages/create-vant-cli-app/package.json
+++ b/packages/create-vant-cli-app/package.json
@@ -30,8 +30,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/fs-extra": "^8.1.0",
-    "@types/yeoman-environment": "^2.3.3",
-    "@types/yeoman-generator": "^3.1.4",
+    "@types/inquirer": "^8.1.3",
     "release-it": "^13.0.0",
     "typescript": "4.x"
   },
@@ -40,9 +39,7 @@
     "consola": "^2.11.3",
     "fast-glob": "^3.2.4",
     "fs-extra": "^8.1.0",
-    "inquirer": "^7.0.6",
-    "yeoman-environment": "^2.8.0",
-    "yeoman-generator": "^4.6.0"
+    "inquirer": "^7.0.6"
   },
   "release-it": {
     "git": {
