--- a/packages/vant-popperjs/package.json
+++ b/packages/vant-popperjs/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@vant/popperjs",
   "version": "1.1.0",
-  "description": "Precompiled popperjs core",
+  "description": "Pre-compiled popperjs core",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/index.d.ts",
+  "sideEffects": false,
   "files": [
     "dist"
   ],
