feat: add dropmenu material 2

--- a/src/cell-group/api.yaml
+++ b/src/cell-group/api.yaml
@@ -58,8 +58,8 @@
       default: 单元格
       description: 左侧标题
     - name: value
-      title: 右侧内容
-      type: string
+      title: 值(右侧内容)
+      type: string, number
       default2: 内容
       description: 右侧内容
     - name: label
