--- a/packages/vant-popperjs/package.json
+++ b/packages/vant-popperjs/package.json
@@ -14,7 +14,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "scripts": {
-    "clean": "rm -rf ./dist",
+    "clean": "rimraf ./dist",
     "dev": "rollup --config rollup.config.js --watch",
     "build:types": "tsc -p ./tsconfig.json --emitDeclarationOnly",
     "build:bundle": "rollup --config rollup.config.js",
