chore: update labels in issue template

--- a/.github/ISSUE_TEMPLATE/template-1-bug-report-vant.zh-CN.yml
+++ b/.github/ISSUE_TEMPLATE/template-1-bug-report-vant.zh-CN.yml
@@ -1,7 +1,7 @@
 name: 我要反馈 Vant 的 Bug
 description: 通过标准模板进行 Bug 反馈。
-title: "[Bug Report] 在此填写标题"
-labels: ["🐞 bug"]
+title: "[Bug Report] 请在此填写标题"
+labels: ["bug: need confirm"]
 body:
   - type: markdown
     attributes:
