--- a/.github/ISSUE_TEMPLATE/template-5-bug-report-vant.en-US.yml
+++ b/.github/ISSUE_TEMPLATE/template-5-bug-report-vant.en-US.yml
@@ -1,7 +1,7 @@
 name: Bug Report
 description: Use issue template to report a bug.
 title: "[Bug Report] Title"
-labels: ["🐞 bug"]
+labels: ["bug: need confirm"]
 body:
   - type: input
     id: reproduce
