--- a/.github/ISSUE_TEMPLATE/template-6-feature-request-vant.en-US.yml
+++ b/.github/ISSUE_TEMPLATE/template-6-feature-request-vant.en-US.yml
@@ -1,7 +1,7 @@
 name: Feature Request
 description: Use issue template to request a new feature.
 title: "[Feature Request] Title"
-labels: ["💡 feature"]
+labels: ["feature: need confirm"]
 body:
   - type: textarea
     id: description
