--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -56,6 +56,7 @@
     "@vant/cli": "^4.0.0-beta.5",
     "@vue/compiler-sfc": "^3.2.20",
     "@vue/runtime-core": "^3.2.20",
+    "@vue/test-utils": "^2.0.0-rc.16",
     "typescript": "4.x",
     "vue": "^3.2.20",
     "vue-router": "^4.0.12"
