--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -53,7 +53,7 @@
   },
   "devDependencies": {
     "@vant/area-data": "^1.1.3",
-    "@vant/cli": "^4.0.0-beta.5",
+    "@vant/cli": "workspace:*",
     "@vue/compiler-sfc": "^3.2.20",
     "@vue/runtime-core": "^3.2.20",
     "@vue/test-utils": "^2.0.0-rc.16",
