--- a/src/datetime-picker/api.yaml
+++ b/src/datetime-picker/api.yaml
@@ -67,6 +67,11 @@
       type: boolean
       default: false
       description: 是否禁用
+    - name: close-on-click-overlay
+      title: 点击遮罩层后关闭
+      type: boolean
+      default: false
+      description: 是否在点击遮罩层后关闭
   slots: false
   events:
     - name: confirm
