--- a/src/dialog/api.yaml
+++ b/src/dialog/api.yaml
@@ -24,6 +24,11 @@
       default: true
       advanced: true
       description: 是否展示取消按钮
+    - name: close-on-click-overlay
+      title: 点击遮罩层后关闭
+      type: boolean
+      default: false
+      description: 是否在点击遮罩层后关闭
   slots:
     - name: default
       description: 内容自定义
