chore: extends base tsconfig

--- a/packages/vant-cli/tsconfig.json
+++ b/packages/vant-cli/tsconfig.json
@@ -1,14 +1,9 @@
 {
+  "extends": "../../tsconfig",
   "compilerOptions": {
     "target": "ES2019",
     "outDir": "./lib",
-    "module": "ESNext",
-    "strict": true,
-    "declaration": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "moduleResolution":"Node",
-    "lib": ["esnext", "dom"]
+    "declaration": true
   },
   "include": ["src/**/*"]
 }
