--- a/packages/vant-area-data/tsconfig.json
+++ b/packages/vant-area-data/tsconfig.json
@@ -1,13 +1,9 @@
 {
+  "extends": "../../tsconfig",
   "compilerOptions": {
     "target": "ES2019",
     "outDir": "./lib",
-    "module": "ES2015",
-    "strict": true,
-    "declaration": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "lib": ["esnext"]
+    "declaration": true
   },
   "include": ["src/**/*"]
 }
