--- a/src/collapse/api.yaml
+++ b/src/collapse/api.yaml
@@ -2,7 +2,7 @@
   title: 折叠面板
   icon: collapse
   labels:
-    - Display
+    - Container
   description: 将一组内容放置在多个折叠面板中，点击面板的标题可以展开或收缩其内容。
   attrs:
     - name: valueprop
