chore: remove lib dir before build

--- a/packages/create-vant-cli-app/package.json
+++ b/packages/create-vant-cli-app/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "tsc --watch",
-    "build": "tsc",
+    "build": "rimraf ./lib && tsc",
     "release": "pnpm build & release-it",
     "prepare": "pnpm build"
   },
