--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "dev": "tsc --watch",
-    "build": "tsc",
+    "build": "rimraf ./lib && tsc",
     "release": "pnpm build & release-it",
     "prepare": "pnpm build"
   },
