--- a/packages/vant-markdown-vetur/package.json
+++ b/packages/vant-markdown-vetur/package.json
@@ -15,7 +15,7 @@
   ],
   "scripts": {
     "dev": "tsc --watch",
-    "build": "tsc",
+    "build": "rimraf ./lib && tsc",
     "release": "pnpm build && npm publish",
     "prepare": "pnpm build"
   },
