--- a/src/dialog/api.yaml
+++ b/src/dialog/api.yaml
@@ -36,10 +36,12 @@
     - name: confirm
       title: 点击确认按钮时触发
       description: 点击确认按钮时触发
+      advanced: true
       params: []
     - name: cancel
       title: 点击取消按钮时触发
       description: 点击取消按钮时触发
+      advanced: true
       params: []
     - name: open
       title: 打开弹出层后
