--- a/packages/create-vant-cli-app/package.json
+++ b/packages/create-vant-cli-app/package.json
@@ -32,7 +32,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^8.1.3",
     "release-it": "^14.11.6",
-    "typescript": "4.x"
+    "typescript": "~4.5.2"
   },
   "dependencies": {
     "chalk": "^4.1.2",
