--- a/packages/vant-popperjs/package.json
+++ b/packages/vant-popperjs/package.json
@@ -28,11 +28,11 @@
     "@popperjs/core": "^2.9.2"
   },
   "devDependencies": {
-    "typescript": "4.x",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "release-it": "^14.2.2",
     "rollup": "^2.33.3",
     "rollup-plugin-esbuild": "^4.6.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "release-it": "^14.2.2"
+    "typescript": "~4.5.2"
   },
   "release-it": {
     "git": {
