--- a/packages/vant-use/package.json
+++ b/packages/vant-use/package.json
@@ -26,9 +26,9 @@
   "repository": "https://github.com/youzan/vant/tree/dev/packages/vant-use",
   "devDependencies": {
     "release-it": "^14.0.2",
-    "typescript": "4.x",
     "rollup": "^2.33.3",
     "rollup-plugin-esbuild": "^4.6.0",
+    "typescript": "~4.5.2",
     "vue": "^3.2.20"
   },
   "release-it": {
