--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -70,7 +70,7 @@
     "@vue/compiler-sfc": "^3.2.20",
     "@vue/runtime-core": "^3.2.20",
     "@vue/test-utils": "^2.0.0-rc.16",
-    "typescript": "4.x",
+    "typescript": "~4.5.2",
     "vue": "^3.2.20",
     "vue-router": "^4.0.12"
   },
