--- a/packages/vant-markdown-loader/package.json
+++ b/packages/vant-markdown-loader/package.json
@@ -7,8 +7,14 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/youzan/vant.git",
+    "directory": "packages/vant-markdown-loader"
+  },
+  "bugs": "https://github.com/youzan/vant/issues",
+  "author": "chenjiahan",
   "license": "MIT",
-  "repository": "https://github.com/youzan/vant/tree/dev/packages/vant-markdown-loader",
   "dependencies": {
     "front-matter": "^4.0.2",
     "highlight.js": "^10.7.1",
