--- a/packages/vant-markdown-vetur/package.json
+++ b/packages/vant-markdown-vetur/package.json
@@ -3,13 +3,6 @@
   "version": "2.2.0",
   "description": "simple parse markdown to vue component description for vetur auto-completion",
   "main": "lib/index.js",
-  "license": "MIT",
-  "repository": "https://github.com/youzan/vant/tree/dev/packages/vant-markdown-vetur",
-  "author": "zhangshuai",
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
   "files": [
     "lib"
   ],
@@ -19,6 +12,18 @@
     "release": "pnpm build && npm publish",
     "prepare": "pnpm build"
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/youzan/vant.git",
+    "directory": "packages/vant-markdown-vetur"
+  },
+  "bugs": "https://github.com/youzan/vant/issues",
+  "author": "zhangshuai",
+  "license": "MIT",
   "dependencies": {
     "fast-glob": "^3.2.2",
     "fs-extra": "^10.0.0"
