--- a/packages/vant-popperjs/package.json
+++ b/packages/vant-popperjs/package.json
@@ -22,8 +22,14 @@
     "release": "pnpm build && release-it",
     "prepare": "pnpm build"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/youzan/vant.git",
+    "directory": "packages/vant-markdown-loader"
+  },
+  "bugs": "https://github.com/youzan/vant/issues",
+  "author": "chenjiahan",
   "license": "MIT",
-  "repository": "https://github.com/youzan/vant/tree/dev/packages/vant-popperjs",
   "dependencies": {
     "@popperjs/core": "^2.9.2"
   },
