--- a/packages/vant-stylelint-config/package.json
+++ b/packages/vant-stylelint-config/package.json
@@ -7,8 +7,14 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/youzan/vant.git",
+    "directory": "packages/vant-stylelint-config"
+  },
+  "bugs": "https://github.com/youzan/vant/issues",
+  "author": "chenjiahan",
   "license": "MIT",
-  "repository": "https://github.com/youzan/vant/tree/dev/packages/vant-stylelint-config",
   "dependencies": {
     "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-standard": "^22.0.0"
