--- a/packages/vant-touch-emulator/package.json
+++ b/packages/vant-touch-emulator/package.json
@@ -6,6 +6,12 @@
   "publishConfig": {
     "access": "public"
   },
-  "license": "MIT",
-  "repository": "https://github.com/youzan/vant/tree/dev/packages/vant-touch-emulator"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/youzan/vant.git",
+    "directory": "packages/vant-touch-emulator"
+  },
+  "bugs": "https://github.com/youzan/vant/issues",
+  "author": "chenjiahan",
+  "license": "MIT"
 }
