--- a/packages/vant-use/package.json
+++ b/packages/vant-use/package.json
@@ -22,8 +22,14 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/youzan/vant.git",
+    "directory": "packages/vant-use"
+  },
+  "bugs": "https://github.com/youzan/vant/issues",
+  "author": "chenjiahan",
   "license": "MIT",
-  "repository": "https://github.com/youzan/vant/tree/dev/packages/vant-use",
   "devDependencies": {
     "release-it": "^14.0.2",
     "rollup": "^2.33.3",
