--- a/packages/vant-use/package.json
+++ b/packages/vant-use/package.json
@@ -2,8 +2,8 @@
   "name": "@vant/use",
   "version": "1.3.4",
   "description": "Vant Composition API",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
   "sideEffects": false,
   "files": [
@@ -11,9 +11,9 @@
   ],
   "scripts": {
     "clean": "rimraf ./dist",
-    "dev": "rollup --config rollup.config.js --watch",
+    "dev": "node ./build.js -w",
     "build:types": "tsc -p ./tsconfig.json --emitDeclarationOnly",
-    "build:bundle": "rollup --config rollup.config.js",
+    "build:bundle": "node ./build.js",
     "build": "pnpm clean && pnpm build:bundle && pnpm build:types",
     "release": "pnpm build && release-it",
     "prepare": "pnpm build"
@@ -31,9 +31,8 @@
   "author": "chenjiahan",
   "license": "MIT",
   "devDependencies": {
+    "esbuild": "^0.13.15",
     "release-it": "^14.0.2",
-    "rollup": "^2.33.3",
-    "rollup-plugin-esbuild": "^4.6.0",
     "typescript": "~4.5.2",
     "vue": "^3.2.20"
   },
