fix: update exports in package.json

--- a/packages/vant/package.json
+++ b/packages/vant/package.json
@@ -22,6 +22,8 @@
     "./lib": "./lib/vant.cjs.js",
     "./es/": "./es/",
     "./lib/": "./lib/",
+    "./lib/*": "./lib/*/vant.cjs.js",
+    "./es/*": "./es/*/vant.es.js",
     "./package.json": "./package.json"
   },
   "files": [
