fix(Pagination): change event not work

--- a/packages/vant-cli/package.json
+++ b/packages/vant-cli/package.json
@@ -48,6 +48,7 @@
     "vue": "^3.2.20"
   },
   "dependencies": {
+    "@types/jest": "^27.0.3",
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
