--- a/src/iconv/api.yaml
+++ b/src/iconv/api.yaml
@@ -4,7 +4,52 @@
   labels:
     - Display
   description: 图标
-  attrs: []
+  attrs:
+    - name: text
+      title: 文本
+      type: string
+      default: 图标
+      description: 文本
+    - name: name
+      title: 图标
+      type: string
+      default: ''
+      description: 图标
+      compType: iconInput
+    - name: linkType
+      title: 链接类型
+      type: string
+      options:
+        - value: destination
+          title: 页面跳转
+        - value: href
+          title: 普通链接
+        - value: download
+          title: 下载链接
+      default: href
+      description: 链接类型
+      compType: linkTypeSelect
+    - name: hrefAndTo
+      title: 链接
+      type: string
+      description: 链接地址
+      compType: linkHrefInput
+    - name: target
+      title: 打开方式
+      type: string
+      options:
+        - value: _blank
+          title: 新标签页
+        - value: _self
+          title: 当前窗口
+        - value: _parent
+          title: 父级窗口
+          advanced: true
+        - value: _top
+          title: 顶级窗口
+          advanced: true
+      default: _self
+      description: 链接打开方式
   slots: false
   events:
     - name: click
